# polynomial-neat

./: Cargo.toml  MIGRATION.md  PAPER.md  README.md
old_src/: runnable.rs
src/: lib.rs  main.rs  network.rs  prelude.rs  scratch.rs  test_utils.rs  tests.rs
src/activated/: main.rs  mod.rs  network.rs  tests.rs
src/activated/candle_net/: basis_prime.rs  mod.rs  network.rs  scratch.rs  tests.rs
src/activated/candle_net/candle_expander/: scratch.rs
src/activated/candle_net/expander/: mod.rs  tests.rs
src/activated/core/: neuron.rs  neuron_type.rs
src/activated/neuron/: input.rs
src/activated/simple_net/: input.rs  network.rs  neuron.rs  neuron_type.rs
src/activated/topology/: activation.rs  input.rs  mutation.rs  network.rs  neuron.rs  neuron_type.rs
src/burn_net/: mod.rs  network.rs  tests.rs
src/candle_net/: basis_prime.rs  coeff.rs  mod.rs  network.rs  neuron.rs  scratch.rs  tests.rs
src/candle_net/candle_expander/: scratch.rs
src/candle_net/candle_expander/polynomial/: indeterminant.rs  mod.rs  polycomponent.rs  variable.rs
src/candle_net/expander/: mod.rs  tests.rs
src/checkpoint/: mod.rs
src/core/: activation.rs  input.rs  mod.rs  neuron.rs  neuron_type.rs
src/neat_rs/: mod.rs  runnable.rs
src/neat_rs/topology/: activation.rs  mod.rs
src/neuron/: input.rs  mod.rs
src/poly/: mod.rs  tests.rs
src/poly/burn_net/: basis_prime.rs  coeff.rs  expander_benchmark.rs  mod.rs  network.rs  tests.rs
src/poly/burn_net/expander/: mod.rs  tests.rs
src/poly/burn_net/gpu_expander/: mod.rs  tests.rs
src/poly/candle_net/: mod.rs  network.rs  scratch.rs  tests.rs
src/poly/candle_net/candle_expander/: mod.rs  scratch.rs
src/poly/candle_net/candle_expander/polynomial/: indeterminant.rs  mod.rs
src/poly/candle_net/expander/: tests.rs
src/poly/core/: activation.rs  input.rs  neuron.rs  neuron_type.rs
src/poly/simple_net/: input.rs  network.rs  neuron.rs  neuron_type.rs
src/poly/topology/: input.rs  mod.rs  mutation.rs  network.rs  neuron.rs  neuron_type.rs
src/replicator/: mod.rs  replicants.rs
src/simple_net/: input.rs  network.rs  neuron.rs  neuron_type.rs
src/topology/: activation.rs  input.rs  mod.rs  mutation.rs  network.rs  neuron.rs  neuron_type.rs  nnt_serde.rs
src/topology/cloner/: mod.rs  neuron.rs
tests/: input_output_validation_tests.rs  neat_algorithm_tests.rs  polynomial_expansion_tests.rs  tensor_setup_tests.rs  topology_evolution_tests.rs
