[package]
name = "candle-neat"
description = "A library that uses candle-rs under the hood for training/testing NEAT"
repository = "https://github.com/dsgallups/candle-neat"
readme = "README.md"
rust-version = "1.80"
authors = ["Daniel Gallups <dsgallups@protonmail.com>"]
keywords = [
    "genetic_algorithms",
    "neural_networks",
    "neuroevolution",
    "network_topologies",
    "speciation",
]
categories = ["algorithms", "science", "simulation"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[features]
# debug = ["dep:tracing", "dep:tracing-subscriber"]
debug = []

[dependencies]
candle-core = { version = "0.7.0", features = ["metal"] }

tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3" }
rand = "0.8.5"
rayon = "1.10"
uuid = { version = "1.10", features = ["rng", "serde", "v4"] }
candle-nn = "0.7.0"
[dev-dependencies]
